# internet_magazin_22.2

./: .gitignore  catalog_data.json  categories.json  contacts.json  groops.json  products.json  pyproject.toml
blog/: admin.py  models.py  urls.py  views.py
blog/templates/blog/: base.html  blogarticle_detail.html  blogarticle_list.html
catalog/: admin.py  db_function.py  forms.py  models.py  services.py  urls.py  views.py
catalog/migrations/: 0001_initial.py  0002_version.py
catalog/templates/: base.html  home.html  product_form.html  products_detail.html  products_list.html
catalog/templates/catalog/: base.html  category_list.html  contacts.html  product_confirm_delete.html  product_detail.html  product_list.html
catalog/templates/catalog/includes/: inc_menu.html
config/: settings.py  urls.py
users/: forms.py  models.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_user_token.py  0003_alter_user_options.py
users/templates/: login.html
users/templates/users/: login.html
