[tool.poetry]
name = "internet-mag"
version = "0.1.0"
description = ""
authors = ["Tatiyana Galitskaya <tatianagalitskaya3@gmail>"]

[tool.poetry.dependencies]
python = "^3.10"
psycopg2-binary = "^2.9.9"
black = "^24.4.2"
pillow = "^10.4.0"
ipython = "^8.26.0"
django = "4.2.2"
python-dotenv = "^1.0.1"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.0"
black = "^24.4.2"
flake8-black = "^0.3.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
